--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartboxquartilecalculation.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartboxquartilecalculation.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ChartBoxQuartileCalculation:enum'
     summary: |-
-      <span data-ttu-id="ea952-101">表示图表系列布局的四分数计算类型。</span><span class="sxs-lookup"><span data-stu-id="ea952-101">Represents the quartile calculation type of chart series layout.</span></span> <span data-ttu-id="ea952-102">仅适用于 box 和形图。</span><span class="sxs-lookup"><span data-stu-id="ea952-102">Only applies to a box and whisker chart.</span></span>
+      表示图表系列布局的四分数计算类型。 仅适用于 box 和形图。
 
-      <span data-ttu-id="ea952-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea952-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartBoxQuartileCalculation
     fullName: Excel.ChartBoxQuartileCalculation
     langs:
