--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegendformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartlegendformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
-    summary: '<span data-ttu-id="8f5d8-101">一个用于更新 ChartLegendFormat 对象上的数据的接口，可用于`chartLegendFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="8f5d8-101">An interface for updating data on the ChartLegendFormat object, for use in `chartLegendFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="8f5d8-102">.</span><span class="sxs-lookup"><span data-stu-id="8f5d8-102"></span></span>'
+    summary: '一个用于更新 ChartLegendFormat 对象上的数据的接口，可用于`chartLegendFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartLegendFormatUpdateData
     fullName: Excel.Interfaces.ChartLegendFormatUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendFormatUpdateData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData#border:member'
     summary: |-
-      <span data-ttu-id="8f5d8-103">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="8f5d8-103">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      表示边框格式，包括颜色、线条样式和粗细。
 
-      <span data-ttu-id="8f5d8-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5d8-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="8f5d8-105">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="8f5d8-105">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span>
+      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="8f5d8-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8f5d8-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
