--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpointformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpointformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="70888-101">表示图表点的格式化对象。</span><span class="sxs-lookup"><span data-stu-id="70888-101">Represents formatting object for chart points.</span></span>
+      表示图表点的格式化对象。
 
-      <span data-ttu-id="70888-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70888-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartPointFormatLoadOptions
     fullName: Excel.Interfaces.ChartPointFormatLoadOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#border:member'
   - uid: 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="70888-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="70888-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="70888-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="70888-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="70888-105">).</span><span class="sxs-lookup"><span data-stu-id="70888-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#border:member'
     summary: |-
-      <span data-ttu-id="70888-106">表示图表数据点的边框格式，包括颜色、样式和权重信息。</span><span class="sxs-lookup"><span data-stu-id="70888-106">Represents the border format of a chart data point, which includes color, style, and weight information.</span></span>
+      表示图表数据点的边框格式，包括颜色、样式和权重信息。
 
-      <span data-ttu-id="70888-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="70888-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
