--- a/docs/docs-ref-autogen/excel/excel/excel.rowpropertiesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.rowpropertiesloadoptions.yml
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.RowPropertiesLoadOptions#rowIndex:member'
   - uid: 'excel!Excel.RowPropertiesLoadOptions#format:member'
     summary: |-
-      指定是否在`format`属性上进行加载。
+      指定是否在属性上进行加载 `format` 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -37,7 +37,7 @@ items:
           - 'excel!Excel.RowPropertiesLoadOptions#format~0:complex'
   - uid: 'excel!Excel.RowPropertiesLoadOptions#rowHidden:member'
     summary: |-
-      指定是否在`rowHidden`属性上进行加载。
+      指定是否在属性上进行加载 `rowHidden` 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHidden
@@ -52,7 +52,7 @@ items:
           - boolean
   - uid: 'excel!Excel.RowPropertiesLoadOptions#rowIndex:member'
     summary: |-
-      指定是否在`rowIndex`属性上进行加载。
+      指定是否在属性上进行加载 `rowIndex` 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
