--- a/docs/docs-ref-autogen/excel/excel/excel.ribbontab.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.ribbontab.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.RibbonTab:enum'
-    summary: '<span data-ttu-id="302b9-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="302b9-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.RibbonTab
     fullName: Excel.RibbonTab
     langs:
