--- a/docs/docs-ref-autogen/word_1_3/word/word.documentpropertytype.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.documentpropertytype.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.DocumentPropertyType:enum'
-    summary: '<span data-ttu-id="f9ccb-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f9ccb-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.DocumentPropertyType
     fullName: Word.DocumentPropertyType
     langs:
